@@ -7,6 +7,10 @@ Enhancements
 
 -- What's new for 3.1.4.4 beta (October 24, 2002)
 
+New Searches
+
+* fandango - Find movie information, listings, and buy tickets online (from Nikolai Devereaux)
+
 Modified Searches
 
 * php - fix problem with spaces in URL (from Nikolai Devereaux)
@@ -15,6 +19,7 @@ Modified Searches
 Bug Fixes
 
 * Popup menu fix - 'Configure' was showing up in the list of search categories
+
 
 -- What's new for 3.1.4.3 beta (October 23, 2002)
 
